--- a/src/conditions/BUILD
+++ b/src/conditions/BUILD
@@ -53,6 +53,12 @@ config_setting(
 )
 
 config_setting(
+    name = "linux_loongarch64",
+    values = {"cpu": "loongarch64"},
+    visibility = ["//visibility:public"],
+)
+
+config_setting(
     name = "darwin",
     values = {"cpu": "darwin"},
     visibility = ["//visibility:public"],
